@@ -151,8 +151,7 @@ int be_visitor_root::visit_root (be_root *node)
                   << i->base_proxy_broker_name ()
                   << "_Factory_function_pointer) ("
                   << be_idt << be_idt_nl
-                  << "::CORBA::Object_ptr obj" << be_uidt_nl
-                  << ");" << be_uidt;
+                  << "::CORBA::Object_ptr obj);" << be_uidt << be_uidt;
             }
         }
 
