@@ -122,16 +122,13 @@ be_visitor_traits::visit_interface (be_interface *node)
           << "{" << be_idt_nl
           << "static ::" << node->name () << "_ptr duplicate ("
           << be_idt << be_idt_nl
-          << "::" << node->name () << "_ptr p" << be_uidt_nl
-          << ");" << be_uidt_nl
+          << "::" << node->name () << "_ptr p);" << be_uidt << be_uidt_nl
           << "static void release (" << be_idt << be_idt_nl
-          << "::" << node->name () << "_ptr p" << be_uidt_nl
-          << ");" << be_uidt_nl
+          << "::" << node->name () << "_ptr p);" << be_uidt << be_uidt_nl
           << "static ::" << node->name () << "_ptr nil (void);" << be_nl
           << "static ::CORBA::Boolean marshal (" << be_idt << be_idt_nl
           << "const ::" << node->name () << "_ptr p," << be_nl
-          << "TAO_OutputCDR & cdr" << be_uidt_nl
-          << ");" << be_uidt << be_uidt_nl
+          << "TAO_OutputCDR & cdr);" << be_uidt  << be_uidt << be_uidt_nl
           << "};";
 
       os->gen_endif ();
